feat: freelancing platform ui

--- a/chat-client/index.html
+++ b/chat-client/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat App</title>
+    <meta name="description" content="FreelanceHub - Connect with talented freelancers or find your next project. Browse projects, submit bids, and collaborate in real-time." />
+    <meta name="keywords" content="freelance, projects, bidding, marketplace, remote work, hiring" />
+    
+    <!-- Preconnect to Google Fonts for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <title>FreelanceHub - Find Your Next Project</title>
   </head>
   <body>
     <div id="root"></div>
